# SuperEvent

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  SuperEvent.code-workspace  conftest.py  environment.yml  evaluate_pose_estimation.py  pyproject.toml  train.py  visualize_matches.py
data/: __init__.py  dataset.py  homographies.py  util.py
data_preparation/: __init__.py  convert_images.py  events2ts.py  filter_kp_maps.py  prepare_pseudo_groundtruth.py  prepare_training_data.sh  split_data.py
data_preparation/util/: __init__.py  data_io.py  helpers.py
docs/: ONNX_CPP_INTEGRATION.md  REPOSITORY_OVERVIEW.md
examples/: demo_event_inference.py  demo_streaming.py
inference/: __init__.py  event_inference.py  event_sources.py  event_visualization.py  export_onnx.py  super_event_model.py
models/: __init__.py  heads.py  losses.py  super_event.py  util.py
models/backbones/: __init__.py  maxvit.py  vgg.py
models/backbones/maxvit_backbone/: __init__.py
models/backbones/maxvit_backbone/layers/: __init__.py
scripts/: demo_event_inference.py  demo_streaming.py  export_onnx_from_paths.py
tests/: conftest.py  test_event_sources.py  test_event_visualization.py  test_inference_aedat4.py  test_interface_data_io.py  test_interface_dataset.py  test_interface_ts_generator.py  test_onnx_export.py  test_super_event_model.py  test_v2e_simulated_inference.py
ts_generation/: __init__.py  generate_ts.py  test_ts.py
util/: __init__.py  eval_utils.py  train_utils.py  visualization.py
